--- a/index.html
+++ b/index.html
@@ -273,9 +273,12 @@
     <script src="./js/checkBlock.js "></script>
     <script src="./js/saveBlock.js ">
     </script>
+    <script src="./js/randomBlock.js"></script>
     <script src="./js/key.js "></script>
     <script src="./js/drawImgDown.js "></script>
     <script src="./js/keyDown.js"></script>
+    <script src="./js/clearRow.js"></script>
+    <script src="./js/skipBlock.js"></script>
     <script>
         //0: i
         blockDefault[0][0] = {
@@ -353,7 +356,7 @@
             // 1: l
         blockDefault[1][0] = {
             x0: 0,
-            y0: 1,
+            y0: 0,
             x1: 2,
             x2: 0,
             x3: 1,
@@ -370,8 +373,8 @@
             next: 1
         }
         blockDefault[1][1] = {
-            x0: 0,
-            y0: -1,
+            x0: 1,
+            y0: 0,
             x1: 0,
             x2: 0,
             x3: 0,
@@ -389,7 +392,7 @@
         }
         blockDefault[1][2] = {
             x0: -1,
-            y0: 1,
+            y0: 0,
             x1: 0,
             x2: 1,
             x3: 2,
@@ -406,8 +409,8 @@
             next: 3
         }
         blockDefault[1][3] = {
-                x0: 1,
-                y0: -1,
+                x0: 0,
+                y0: 0,
                 x1: 0,
                 x2: 1,
                 x3: 1,
@@ -425,8 +428,8 @@
             }
             // 2: ln
         blockDefault[2][0] = {
-            x0: 1,
-            y0: 1,
+            x0: 0,
+            y0: 0,
             x1: 0,
             x2: 0,
             x3: 1,
@@ -444,7 +447,7 @@
         }
         blockDefault[2][1] = {
             x0: 1,
-            y0: -1,
+            y0: 0,
             x1: 0,
             x2: 1,
             x3: 0,
@@ -462,7 +465,7 @@
         }
         blockDefault[2][2] = {
             x0: -1,
-            y0: 1,
+            y0: 0,
             x1: 0,
             x2: 1,
             x3: 2,
@@ -479,8 +482,8 @@
             next: 3
         }
         blockDefault[2][3] = {
-                x0: -1,
-                y0: -1,
+                x0: 0,
+                y0: 0,
                 x1: 1,
                 x2: 1,
                 x3: 0,
@@ -499,7 +502,7 @@
             //3:s
         blockDefault[3][0] = {
             x0: 0,
-            y0: 1,
+            y0: 0,
             x1: 1,
             x2: 2,
             x3: 0,
@@ -517,7 +520,7 @@
         }
         blockDefault[3][1] = {
             x0: 1,
-            y0: -1,
+            y0: 0,
             x1: 0,
             x2: 0,
             x3: 1,
@@ -535,7 +538,7 @@
         }
         blockDefault[3][2] = {
             x0: -1,
-            y0: 1,
+            y0: 0,
             x1: 1,
             x2: 2,
             x3: 0,
@@ -553,7 +556,7 @@
         }
         blockDefault[3][3] = {
                 x0: 0,
-                y0: -1,
+                y0: 0,
                 x1: 0,
                 x2: 0,
                 x3: 1,
@@ -572,7 +575,7 @@
             // 4: sn
         blockDefault[4][0] = {
             x0: 0,
-            y0: -3,
+            y0: 0,
             x1: 0,
             x2: 1,
             x3: 1,
@@ -590,7 +593,7 @@
         }
         blockDefault[4][1] = {
             x0: 1,
-            y0: 1,
+            y0: 0,
             x1: 1,
             x2: 0,
             x3: 1,
@@ -608,7 +611,7 @@
         }
         blockDefault[4][2] = {
             x0: -1,
-            y0: 1,
+            y0: 0,
             x1: 0,
             x2: 1,
             x3: 1,
@@ -626,7 +629,7 @@
         }
         blockDefault[4][3] = {
                 x0: 0,
-                y0: -1,
+                y0: 0,
                 x1: 1,
                 x2: 0,
                 x3: 1,
@@ -681,7 +684,7 @@
         }
         blockDefault[5][2] = {
             x0: -1,
-            y0: 1,
+            y0: 0,
             x1: 0,
             x2: 1,
             x3: 2,
@@ -699,7 +702,7 @@
         }
         blockDefault[5][3] = {
                 x0: 0,
-                y0: -1,
+                y0: 0,
                 x1: 1,
                 x2: 0,
                 x3: 1,
@@ -736,9 +739,12 @@
         }
         var stt = 0;
         nRandom = Math.floor(Math.random() * 7);
-        selectBlock(nRandom);
+        randomBlock();
         document.addEventListener("keydown", (event) => {
             switch (event.keyCode) {
+                case 32:
+                    down();
+                    break;
                 case 37:
                     left();
                     break;
@@ -748,9 +754,14 @@
                 case 39:
                     right();
                     break;
-                case 40:
-                    down();
+                case 67:
+                    skipBlock();
                     break;
+            }
+        })
+        document.addEventListener("keyup", (event) => {
+            if (event.keyCode == 40) {
+                down()
             }
         })
     </script>
